hphp/hack/test/typecheck/message_vector.php.exp
File "message_vector.php", line 21, characters 3-16:
Invalid assignment (Typing[4110])
File "message_vector.php", line 15, characters 25-25:
This is an object of type B
File "message_vector.php", line 15, characters 25-25:
Considering that this type argument is invariant with respect to Vector
File "message_vector.php", line 21, characters 14-14:
It is incompatible with an object of exactly the class A
